
0.3.0
* Added getRecentChanges(java.util.Date date)
* Fixed bug when reading modification date with getPageInfo

0.2.0
* Added getPageVersions(String pageId)
* Fixed bug when reading page version with gePagelist

0.1.0